# organism

./: .gitignore  AGENTS.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  MILESTONES.md  README.md  SECURITY.md  clippy.toml  deny.toml  justfile
_legacy/organism-application/: .env.example  Cargo.toml  README.md
_legacy/organism-application/data/spike_capacity/: delivery_history.json  demand_forecast.json  team_capacity.json
_legacy/organism-application/examples/formfiller/: AGENTS.md  Cargo.toml  ROADMAP.md  justfile
_legacy/organism-application/examples/university-course-application/: Cargo.toml  README.md
_legacy/organism-application/src/: agents.rs  lib.rs
_legacy/organism-application/src/spike/: admission.rs  agents.rs  invariants.rs  learning.rs  mod.rs  scenario.rs
_legacy/organism-application/src/spike_batch_anomaly/: Cargo.toml  spike_anomaly_events.parquet
_legacy/organism-application/src/spike_capacity/: agents.rs  consensus.rs  invariants.rs  mod.rs  optimization.rs  scenario.rs
_legacy/organism-application/src/spike_market/: agents.rs  consensus.rs  invariants.rs  mod.rs  optimization.rs  scenario.rs
_legacy/organism-core/: Cargo.toml  README.md
_legacy/organism-core/src/: adversarial.rs  authority.rs  commit.rs  intent.rs  learning.rs  lib.rs  planning.rs  simulation.rs
_legacy/organism-domain/: Cargo.toml  README.md
_legacy/organism-domain/src/: evals.rs  lib.rs
_legacy/organism-domain/src/blueprints/: campaign_to_revenue.rs  hire_to_retire.rs  idea_to_launch.rs  issue_to_resolution.rs  lead_to_cash.rs  mod.rs  partner_to_value.rs  patent_research.rs  procure_to_pay.rs
_legacy/organism-domain/src/packs/: autonomous_org.rs  customers.rs  growth_marketing.rs  legal.rs  linkedin_research.rs  mod.rs  ops_support.rs  partnerships_vendors.rs  people.rs  performance.rs  procurement_assets.rs  product_engineering.rs  reskilling.rs  virtual_teams.rs
_legacy/organism-domain/src/use_cases/: catalog_enrichment.rs  catalog_enrichment_llm.rs  compliance_monitoring_llm.rs  crm_account_health_llm.rs  growth_strategy_llm.rs  hr_policy_alignment.rs  hr_policy_alignment_llm.rs  inventory_rebalancing.rs  inventory_rebalancing_llm.rs  meeting_scheduler_llm.rs  mod.rs  patent_research.rs  sdr_sales.rs  strategic_sourcing.rs  strategic_sourcing_llm.rs  supply_chain.rs  travel.rs
crates/adversarial/: Cargo.toml
crates/adversarial/src/: agents.rs  anomaly_skeptic.rs  lib.rs  provenance.rs  types.rs
crates/catalog/: Cargo.toml
crates/catalog-seed/: Cargo.toml
crates/catalog-seed/src/: lib.rs  support.rs
crates/catalog-seed/src/converge/: kernel.rs  mod.rs  optimization.rs
crates/catalog-seed/src/mosaic/: arbiter.rs  embassy.rs  ferrox.rs  mnemos.rs  mod.rs  prism.rs  soter.rs
crates/catalog-seed/src/organism/: adversarial.rs  dynamics.rs  learning.rs  mod.rs  planning.rs  runtime.rs  simulation.rs
crates/catalog-seed/tests/: acceptance.rs
crates/catalog/src/: descriptor.rs  discovery.rs  lib.rs  lookup.rs  registry.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  pack.rs
crates/domain/src/blueprints/: campaign_to_revenue.rs  diligence_to_decision.rs  hire_to_retire.rs  idea_to_launch.rs  issue_to_resolution.rs  lead_to_cash.rs  mod.rs  partner_to_value.rs  patent_research.rs  procure_to_pay.rs
crates/domain/src/packs/: autonomous_org.rs  customers.rs  due_diligence.rs  growth_marketing.rs  knowledge.rs  legal.rs  linkedin_research.rs  mod.rs  ops_support.rs  partnerships.rs  people.rs  performance.rs  procurement.rs  product_engineering.rs  reskilling.rs  virtual_teams.rs
crates/dynamics/: Cargo.toml
crates/dynamics/src/: batch.rs  compile.rs  critic.rs  exclusion.rs  extract.rs  lib.rs  payload.rs  preflight.rs  proposer.rs  provenance.rs  scorer.rs
crates/dynamics/tests/: critic_and_charter.rs  design_to_work_formation.rs  round_driven_huddle.rs  round_driven_huddle_richer.rs
crates/intelligence/: Cargo.toml
crates/intelligence/src/: lib.rs  linkedin.rs  patent.rs  pdf.rs  provenance.rs  secret.rs  social.rs  web.rs
crates/intelligence/src/billing/: client.rs  ledger.rs  mod.rs  types.rs  (+1 more)
crates/intent/: Cargo.toml
crates/intent/src/: admission.rs  bridge.rs  convergence.rs  decomposition.rs  graded_admission.rs  lib.rs  problem.rs  resolution.rs
crates/learning/: Cargo.toml
crates/learning/src/: adapter.rs  lib.rs  prior_agent.rs  provenance.rs
crates/learning/tests/: bidirectional_variants.rs  recall_feeds_priors.rs
crates/notes/: Cargo.toml
crates/notes/src/: cleanup.rs  enrichment.rs  lib.rs  vault.rs
crates/pack/: Cargo.toml
crates/pack/src/: lib.rs  pack.rs
crates/pack/tests/: axiom_enforcement.rs
crates/planning/: Cargo.toml
crates/planning/src/: charter_derivation.rs  collaboration.rs  dd.rs  debate.rs  fuzzy_reasoner.rs  fuzzy_suggestor.rs  huddle.rs  huddle_invocation.rs  kb.rs  lib.rs  ml_prediction_reasoner.rs  provenance.rs  shape_hypothesis.rs  suggestor.rs  topology_transition.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: classifier.rs  collaboration.rs  compiler.rs  execution.rs  experience.rs  factories.rs  formation.rs  guru.rs  huddle.rs  lib.rs  outcome.rs  provenance.rs  readiness.rs  registry.rs  stall.rs  templates.rs  tournament.rs  vendor_selection.rs
crates/runtime/tests/: catalog_integration.rs  intent_admission.rs  recall_biases_synthesis.rs  truth_admission.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: causal.rs  cost.rs  lib.rs  operational.rs  outcome.rs  policy.rs  provenance.rs  types.rs
examples/debate-loop/: Cargo.toml
examples/debate-loop/src/: main.rs
examples/due-diligence-loop/: Cargo.toml
examples/due-diligence-loop/src/: main.rs
examples/expense-approval/: Cargo.toml
examples/expense-approval/src/: main.rs
examples/formation-compiler/: Cargo.toml
examples/formation-compiler/src/: main.rs
examples/loan-application/: Cargo.toml
examples/loan-application/src/: main.rs
examples/vendor-selection/: Cargo.toml
examples/vendor-selection/src/: main.rs
(+168 files in other folders)
