[workspace]
resolver = "3"
members = [
    "crates/intent",
    "crates/planning",
    "crates/adversarial",
    "crates/simulation",
    "crates/learning",
    "crates/runtime",
    "crates/intelligence",
    "crates/pack",
    "crates/notes",
]
default-members = [
    "crates/*",
]

[workspace.package]
version = "1.5.1"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/Reflective-Lab/organism"

[workspace.dependencies]
# Internal crates
organism-intent = { path = "crates/intent", version = "1.5.1" }
organism-planning = { path = "crates/planning", version = "1.5.1" }
organism-adversarial = { path = "crates/adversarial", version = "1.5.1" }
organism-simulation = { path = "crates/simulation", version = "1.5.1" }
organism-learning = { path = "crates/learning", version = "1.5.1" }
organism-runtime = { path = "crates/runtime", version = "1.5.1" }
organism-pack = { path = "crates/pack", version = "1.5.1" }
organism-intelligence = { path = "crates/intelligence", version = "1.5.1" }
organism-notes = { path = "crates/notes", version = "1.5.1" }

# Converge contract (3.8.1 floor — published to crates.io)
converge-pack     = "3.8.1"
converge-kernel   = "3.8.1"
converge-provider = "3.8.1"

# Converge extensions — all target Converge 3.8.1.
# Aliased to their `[lib] name` for ergonomic `use <alias>::...`.
arbiter          = { package = "converge-arbiter-policy",   version = "1.0" }
atelier-domain   = { package = "converge-atelier-domain",   version = "1.0" }
embassy-pack     = { package = "converge-embassy-pack",     version = "1.0" }
embassy-linkedin = { package = "converge-embassy-linkedin", version = "1.0" }
ferrox           = { package = "converge-ferrox-solver",    version = "0.4.1" }
ferrox-server    = { package = "converge-ferrox-server",    version = "0.4.1" }
manifold         = { package = "converge-manifold-adapters", version = "1.0" }
mnemos           = { package = "converge-mnemos-knowledge", version = "1.0" }
prism            = { package = "converge-prism-analytics",  version = "1.0" }

# Shared deps
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
new_without_default = "allow"
return_self_not_must_use = "allow"
should_implement_trait = "allow"
unused_async = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

[profile.release]
codegen-units = 1
lto = true

# Converge 3.8.1 foundation crates publish to crates.io directly; no patches
# needed for them. Extension crates (`publish = false`) resolve through these
# path entries.
[patch.crates-io]
converge-arbiter-policy     = { path = "../../extensions/arbiter-policy/crates/arbiter" }
converge-atelier-domain     = { path = "../../extensions/atelier-showcase/crates/atelier-domain" }
converge-embassy-pack       = { path = "../../extensions/embassy-ports/crates/pack" }
converge-embassy-linkedin   = { path = "../../extensions/embassy-ports/crates/linkedin" }
converge-ferrox-solver      = { path = "../../extensions/ferrox-solvers/crates/ferrox" }
converge-ferrox-server      = { path = "../../extensions/ferrox-solvers/crates/ferrox-server" }
converge-ferrox-ortools-sys = { path = "../../extensions/ferrox-solvers/crates/ortools-sys" }
converge-ferrox-highs-sys   = { path = "../../extensions/ferrox-solvers/crates/highs-sys" }
converge-manifold-adapters  = { path = "../../extensions/manifold-adapters/crates/manifold" }
converge-mnemos-knowledge   = { path = "../../extensions/mnemos-knowledge/crates/mnemos" }
converge-prism-analytics    = { path = "../../extensions/prism-analytics/crates/prism" }
