[workspace]
resolver = "3"
members = [
    "crates/intent",
    "crates/planning",
    "crates/adversarial",
    "crates/simulation",
    "crates/learning",
    "crates/runtime",
    "crates/intelligence",
    "crates/pack",
    "crates/notes",
    "crates/catalog",
    "crates/catalog-seed",
    "crates/dynamics",
]
default-members = [
    "crates/*",
]

[workspace.package]
version = "1.9.3"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/Reflective-Lab/organism"

[workspace.dependencies]
# Internal crates
organism-intent = { path = "crates/intent", version = "1.9.3" }
organism-planning = { path = "crates/planning", version = "1.9.3" }
organism-adversarial = { path = "crates/adversarial", version = "1.9.3" }
organism-simulation = { path = "crates/simulation", version = "1.9.3" }
organism-learning = { path = "crates/learning", version = "1.9.3" }
organism-runtime = { path = "crates/runtime", version = "1.9.3" }
organism-pack = { path = "crates/pack", version = "1.9.3" }
organism-intelligence = { path = "crates/intelligence", version = "1.9.3" }
organism-notes = { path = "crates/notes", version = "1.9.3" }
organism-catalog = { path = "crates/catalog", version = "1.9.3" }
organism-catalog-seed = { path = "crates/catalog-seed", version = "1.9.3" }
organism-dynamics = { path = "crates/dynamics", version = "1.9.3" }

# Converge contract (3.9.1 floor — 3.9.0 contract plus release dependency fixes)
converge-pack     = "3.9.2"
converge-kernel   = "3.9.2"
converge-provider = "3.9.2"

# Converge extensions — all target the Converge 3.9 contract. Local stack
# development resolves touched own crates from the checked-out source so API
# corrections are consumed directly instead of waiting for a release tag.
arbiter          = { package = "converge-arbiter-policy",    version = "2.0.2" }
atelier-domain   = { package = "converge-atelier-domain",    version = "1.0" }
embassy-pack     = { package = "converge-embassy-pack",      version = "1.3.1" }
embassy-linkedin = { package = "converge-embassy-linkedin",  version = "1.3.1" }
ferrox           = { package = "converge-ferrox-solver",     version = "0.7.2" }
manifold         = { package = "converge-manifold-adapters", version = "1.1.2" }
mnemos           = { package = "converge-mnemos-knowledge",  version = "1.2.3" }
prism            = { package = "converge-prism-analytics",   version = "2.0.2" }

# Shared deps
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
new_without_default = "allow"
return_self_not_must_use = "allow"
should_implement_trait = "allow"
unused_async = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

[profile.release]
codegen-units = 1
lto = true


[patch.crates-io]
converge-pack         = { path = "../converge/crates/pack" }
converge-kernel       = { path = "../converge/crates/kernel" }
converge-core         = { path = "../converge/crates/core" }
converge-model        = { path = "../converge/crates/model" }
converge-optimization = { path = "../converge/crates/optimization" }
converge-runtime      = { path = "../converge/crates/runtime" }
converge-experience   = { path = "../converge/crates/experience" }
converge-provider     = { path = "../converge/crates/provider" }
