[package]
name = "organism-application"
description = "Business-level applications built on Organism — form filling, domain-specific tools, and application agents"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-Proprietary"
repository = "https://github.com/kpernyer/organism-application"
documentation = "https://docs.rs/organism-application"
keywords = ["organism", "application", "business", "agents"]
categories = ["command-line-utilities"]

[dependencies]
organism-core = { path = "../organism-core" }
organism-domain = { path = "../organism-domain" }
converge-core = { path = "../converge-core/converge-core" }
converge-domain = { path = "../converge-domain" }
converge-provider = { path = "../converge-provider" }
converge-optimization = { path = "../converge-optimization", features = ["sat"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tracing-test = "0.2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
items_after_statements = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
