[package]
name = "organism-domain"
description = "Business domain packs, blueprints, and use cases for Organism — the organizational intelligence runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-Proprietary"
repository = "https://github.com/kpernyer/organism-domain"
documentation = "https://docs.rs/organism-domain"
keywords = ["organism", "domain", "packs", "blueprints", "business"]
categories = ["algorithms", "simulation"]

[dependencies]
organism-core = { path = "../organism-core" }
converge-core = { path = "../converge-core/converge-core" }
converge-domain = { path = "../converge-domain" }
converge-provider = { path = "../converge-provider", features = ["patent", "linkedin"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tracing-test = "0.2"
dotenv = "0.15"
proptest = "1.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
items_after_statements = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
