[package]
name = "organism-adversarial"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Adversarial review for Organism — challenges, skeptics, governance signals"

[dependencies]
organism-planning.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true

[lints]
workspace = true
