[package]
name = "organism-catalog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Descriptor catalog and lookup primitives for Organism — selection-layer mechanism, host-wired executable factories live elsewhere"

[dependencies]
converge-kernel.workspace = true
converge-pack.workspace = true
converge-provider.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
