[package]
name = "organism-dynamics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Formation Dynamics — the deliberation that decides which formation runs. Suggestors, payloads, and helpers that participate in normal Converge runs. The huddle IS a Formation; nothing here introduces a side-car workflow."

[dependencies]
organism-catalog.workspace = true
organism-runtime.workspace = true
converge-kernel.workspace = true
converge-pack.workspace = true
converge-provider.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
