[package]
name = "organism-intelligence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Business intelligence providers for Organism — OCR, Vision, Patent, Web, Social. (LinkedIn extracted to embassy-linkedin.)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
reqwest = { version = "0.13", features = ["json", "blocking"], optional = true }
base64 = { version = "0.22", optional = true }
sha2 = { version = "0.11" }
url = { version = "2", optional = true }
pdf-extract = { version = "0.10", optional = true }

# ---------------------------------------------------------------------------
# Carve-out from the "no feature flags / no conditional compiles" rule.
#
# Each feature below gates an **optional heavy dep**:
#   * ocr/vision/patent/web → reqwest (HTTP client + TLS), base64, sha2, url
#   * pdf                            → pdf-extract (PDF parsing, large native code)
# `organism-intelligence` ships a menu of business-intelligence providers
# and few consumers want all of them. Folding these deps into every
# downstream build (TLS, PDF parsing, ~MB of compiled native code) would
# be a strictly worse outcome than gating them, so the flags remain
# deliberately in the form of optional-dep aliases only — they do not
# fork any code path within a single configuration.
#
# When organism-intelligence is split into per-provider crates (the
# longer-term direction), these gates can disappear with no consumer
# change.
# ---------------------------------------------------------------------------
[features]
default = []
ocr = ["dep:base64", "dep:reqwest"]
vision = ["dep:reqwest", "dep:base64"]
patent = ["dep:reqwest", "dep:base64"]
web = ["dep:reqwest", "dep:url"]
social = ["web"]
pdf = ["dep:pdf-extract"]

[lints]
workspace = true
