[package]
name = "organism-learning"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Learning layer for Organism — episodes, prediction error, prior calibration"

[dependencies]
converge-pack.workspace = true
converge-kernel.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
chrono.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio.workspace = true
