[package]
name = "organism-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Curated embedded runtime for Organism — registry, readiness, and pipeline wiring"

[dependencies]
organism-intent.workspace = true
organism-planning.workspace = true
organism-adversarial.workspace = true
organism-simulation.workspace = true
organism-learning.workspace = true
organism-domain.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono.workspace = true

[lints]
workspace = true
