[package]
name = "organism-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Curated embedded runtime for Organism — registry, readiness, and pipeline wiring"

[dependencies]
organism-pack.workspace = true
organism-adversarial.workspace = true
organism-simulation.workspace = true
organism-learning.workspace = true
organism-intent.workspace = true
organism-catalog.workspace = true
converge-kernel.workspace = true
converge-pack.workspace = true
converge-provider.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true

# Path-only dev-dep on catalog-seed (no version) so cargo publish can
# resolve runtime without a circular dependency on catalog-seed,
# which itself dev-depends on runtime.
[dev-dependencies]
chrono.workspace = true
proptest.workspace = true
organism-catalog-seed = { path = "../catalog-seed" }

[lints]
workspace = true
