[package]
name = "example-debate-loop"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-kernel = { workspace = true }
converge-pack = { workspace = true }
organism-pack = { path = "../../crates/pack" }
organism-domain = { path = "../../crates/domain" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
