[package]
name = "example-due-diligence-loop"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-kernel = { workspace = true }
organism-pack = { workspace = true }
organism-runtime = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
