[package]
name = "example-expense-approval"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-kernel.workspace = true
organism-pack = { path = "../../crates/pack" }
organism-domain = { path = "../../crates/domain" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
