[package]
name = "example-loan-application"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-kernel = { workspace = true }
converge-pack = { workspace = true }
organism-pack = { path = "../../crates/pack" }
organism-domain = { path = "../../crates/domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
