[package]
name = "example-vendor-selection"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-kernel = { path = "../../../converge/crates/kernel" }
converge-pack = { path = "../../../converge/crates/pack" }
organism-domain = { path = "../../crates/domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
