[package]
name = "example-vendor-selection"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
converge-kernel = { workspace = true }
converge-pack = { workspace = true }
organism-domain = { path = "../../crates/domain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
