[package]
name = "formfiller"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Fast form filler with TUI for time-sensitive applications"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web automation (WebDriver/Selenium)
thirtyfour = "0.32"

# Serialization & data
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID for profile IDs
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client for fetching suggestions
reqwest = { version = "0.12", features = ["json"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }
