[package]
name = "university-course-application"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "CLI application for governed university course applications"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
